projects/compiler/test/parser/assignment_error_illegal_target.out
Error at %FILE_NAME%:1:5
Unexpected token '=':
  |  123 = "123"
         ^